# graduate-work

./: .gitignore  .travis.yml  AUTHORS  AUTHOTS  CHANGELOG.md  CMakeLists.txt  ChangeLog  README.md  build.sh  clean.sh  conf.doxy  graduate-work.pro  invers-mat.cpp  lukas_kanade.qml  lukas_kanade_qt.pro  run.sh  strain_calculate.qml
3tdparty/: conv2.c  conv2.h  invers-mat.cpp  inverse.cpp  pinv.c  pinv.h
diplom/: Panin_070215.tex  config.tex  doxygen_doc_start.tex  emul.rb  git.tex  gost71u2003.bst  intro-vvedenie.tex  lib.bib  lib.bib.bak  main.aux  main.bbl  main.blg  main.tex  main.toc  makereport.sh  out.tex  partI-I.tex  partI.tex  partII-I.tex  partII.tex  partIII.tex  partIV.tex  partV.tex  partVI.tex  qml_listing.tex  qt_doc.tex  quest.tex  referat.tex  referat_en.tex  referat_ru.tex  table.tex  technical_attributes.tex  testing_attributes.tex  title.tex  titleList.tex  Разработка и исследование ПО для вычсления оптичес
diplom/images/: xml_uml.xmi
diplom/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  global_8h.tex  lk__func_8h.tex  refman.tex  structSubSize.tex  structimageInform.tex  structpointerToLvlPyramid.tex
graduate-work/: graduate-work.pro
input/high_contrast/: HCY00 X00.tif  HCY00 X01.tif  HCY00 X02.tif  HCY00 X03.tif  HCY00 X04.tif  HCY00 X05.tif  HCY00 X06.tif  HCY00 X07.tif  HCY00 X08.tif  HCY00 X09.tif  HCY00 X10.tif  HCY01 X00.tif  HCY01 X01.tif  HCY01 X02.tif  HCY01 X03.tif  HCY01 X04.tif  HCY01 X05.tif  HCY01 X06.tif  HCY01 X07.tif  HCY01 X08.tif  HCY01 X09.tif  HCY01 X10.tif  HCY02 X00.tif  HCY02 X01.tif  HCY02 X02.tif  HCY02 X03.tif  HCY02 X04.tif  HCY02 X05.tif  HCY02 X06.tif  HCY02 X07.tif  HCY02 X08.tif  HCY02 X09.tif  HCY02 X10.tif  HCY03 X00.tif  HCY03 X01.tif  HCY03 X02.tif  HCY03 X03.tif  HCY03 X04.tif  HCY03 X05.tif  HCY03 X06.tif  (+82 more)
src/: global.cpp  global.h  lk_func.cpp  lk_func.h  lk_interpolation.cpp  lk_interpolation.h  lk_math.cpp  lk_math.h  lk_struct.h  main.c  main.cpp  version.h  version.h.in
